--- a/auth/blueprints/user/templates/user/current.html
+++ b/auth/blueprints/user/templates/user/current.html
@@ -1,11 +1,10 @@
 {% extends 'layouts/default.html' %}
 
-{% set page_title = 'New User' %}
+{% set page_title = 'My Account' %}
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.user_new') }} class="pure-form pure-form-aligned">
-            {{ form.csrf_token }}
+        <form method="post" action={{ url_for('.mine') }} class="pure-form pure-form-aligned">
             {% include 'user/_form.html' %}
         </form>
     </div>
