--- a/auth/blueprints/user/templates/user/new.html
+++ b/auth/blueprints/user/templates/user/new.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/default.html' %}
 
-{% set page_title = 'Edit User' %}
+{% set page_title = 'New User' %}
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.user_edit', id=instance.id) }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.new') }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'user/_form.html' %}
         </form>
