--- a/auth/blueprints/voucher/templates/voucher/new.html
+++ b/auth/blueprints/voucher/templates/voucher/new.html
@@ -7,7 +7,7 @@
     <div class="content">
         <div class="panel panel-voucher">
             <div class="panel-body">
-                <form method="post" action={{ url_for('.voucher_new') }} class="pure-form pure-form-aligned">
+                <form method="post" action={{ url_for('.new') }} class="pure-form pure-form-aligned">
                     {{ form.csrf_token }}
 
                     <fieldset>
