--- a/auth/blueprints/wifidog/templates/wifidog/login.html
+++ b/auth/blueprints/wifidog/templates/wifidog/login.html
@@ -13,7 +13,7 @@
     <div class="content">
         <p><strong>Note:</strong> A voucher gives you Internet access on one device only.</p>
 
-        <form method="post" action="{{ url_for('.wifidog_login') }}" class="pure-form pure-form-aligned">
+        <form method="post" action="{{ url_for('.login') }}" class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {{ form.gw_address | safe }}
             {{ form.gw_port | safe }}
