--- a/auth/blueprints/category/templates/category/index.html
+++ b/auth/blueprints/category/templates/category/index.html
@@ -2,7 +2,7 @@
 
 {% set page_title = 'Categories' %}
 {% set new_title = 'New Category' %}
-{% set new_url = url_for('.category_new') %}
+{% set new_url = url_for('.new') %}
 
 {% set show_network = current_user.has_role('super-admin') %}
 {% set show_gateway = current_user.has_role('super-admin') or current_user.has_role('network-admin') %}
@@ -31,7 +31,7 @@
                     </tr>
                 </thead>
 
-                <tbody data-url="{{ url_for('.category_sort') }}">
+                <tbody data-url="{{ url_for('.sort') }}">
                     {% for instance in pagination.items %}
                         <tr data-id={{ instance.id }} class="category">
                             {% if show_network or show_gateway %}
@@ -49,13 +49,13 @@
                             {% if instance.read_only %}
                             <td class="code" data-label="Code">{{ instance.code }}</td>
                             {% else %}
-                            <td class="code" data-label="Code"><a href={{ url_for('.category_edit', code=instance.code) }}>{{ instance.code }}</a></td>
+                            <td class="code" data-label="Code"><a href={{ url_for('.edit', code=instance.code) }}>{{ instance.code }}</a></td>
                             {% endif %}
                             <td class="title" data-label="Title">{{ instance.title }}</td>
 
                             <td class="actions actions-instance">
                                 <div class="pure-button-group" role="group" aria-label="Actions Available">
-                                    <a href={{ url_for('.category_delete', code=instance.code) }} class="pure-button">
+                                    <a href={{ url_for('.delete', code=instance.code) }} class="pure-button">
                                         <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
                                         Delete
                                     </a>
