--- a/auth/blueprints/category/templates/category/new.html
+++ b/auth/blueprints/category/templates/category/new.html
@@ -1,10 +1,10 @@
 {% extends 'layouts/default.html' %}
 
-{% set page_title = 'Edit Category' %}
+{% set page_title = 'New Category' %}
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.category_edit', code=instance.code) }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.new') }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'category/_form.html' %}
         </form>
