--- a/auth/blueprints/product/templates/product/index.html
+++ b/auth/blueprints/product/templates/product/index.html
@@ -49,7 +49,7 @@
                             </td>
                             {% endif %}
                             <td class="sequence" data-label="Seq">{{ instance.sequence }}</td>
-                            <td class="category" data-label="Category"><a href={{ url_for('.category_edit', code=instance.category.code) }}>{{ instance.category }}</a></td>
+                            <td class="category" data-label="Category"><a href={{ url_for('category.edit', code=instance.category.code) }}>{{ instance.category }}</a></td>
                             <td class="code" data-label="Code"><a href={{ url_for('.edit', id=instance.id) }}>{{ instance.code }}</a></td>
                             <td class="title" data-label="Title">{{ instance.title }}</td>
                             <td class="price" data-label="Price">{{ instance.network.currency.render_amount(instance.price) }}</td>
