--- a/auth/blueprints/cashup/templates/cashup/new.html
+++ b/auth/blueprints/cashup/templates/cashup/new.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="content">
-    <form method="post" action={{ url_for('.cashup_new') }} class="order-item pure-form pure-form-aligned">
+    <form method="post" action={{ url_for('.new') }} class="order-item pure-form pure-form-aligned">
         {{ form.csrf_token }}
 
         <p>This will mark the end of a transaction period on the system.</p>
