--- a/auth/blueprints/cashup/templates/cashup/show.html
+++ b/auth/blueprints/cashup/templates/cashup/show.html
@@ -28,7 +28,7 @@
         <ul>
             {% for transaction in instance.transactions %}
             <li>
-                <a href="{{ url_for('.transaction_show', hash=transaction.hash) }}">{{ transaction }}</a> - {{ transaction.type[0].upper() + transaction.type[1:] }} {{ transaction.status }} for {{ transaction.currency.render_amount(transaction.total_amount) }} via {{ transaction.processor }}.
+                <a href="{{ url_for('transaction.show', hash=transaction.hash) }}">{{ transaction }}</a> - {{ transaction.type[0].upper() + transaction.type[1:] }} {{ transaction.status }} for {{ transaction.currency.render_amount(transaction.total_amount) }} via {{ transaction.processor }}.
             </li>
             {% endfor %}
         </ul>
