--- a/auth/blueprints/currency/templates/currency/index.html
+++ b/auth/blueprints/currency/templates/currency/index.html
@@ -2,7 +2,7 @@
 
 {% set page_title = 'Currencies' %}
 {% set new_title = 'New Currency' %}
-{% set new_url = url_for('.currency_new') %}
+{% set new_url = url_for('.new') %}
 
 {% block content %}
     <div class="content">
@@ -22,7 +22,7 @@
                 <tbody>
                     {% for instance in pagination.items %}
                         <tr data-id={{ instance.id }} class={{ 'pure-table-' + loop.cycle('odd', 'even') }}>
-                            <td class="id" data-label="ID"><a href={{ url_for('.currency_edit', id=instance.id) }}>{{ instance.id }}</a></td>
+                            <td class="id" data-label="ID"><a href={{ url_for('.edit', id=instance.id) }}>{{ instance.id }}</a></td>
                             <td class="title" data-label="Title">{{ instance.title }}</td>
                             <td class="prefix" data-label="Prefix">{{ instance.prefix }}</td>
                             <td class="suffix" data-label="Suffix">{{ instance.suffix }}</td>
@@ -30,7 +30,7 @@
 
                             <td class="actions actions-instance">
                                 <div class="pure-button-group" role="group" aria-label="Actions Available">
-                                    <a href={{ url_for('.currency_delete', id=instance.id) }} class="pure-button">
+                                    <a href={{ url_for('.delete', id=instance.id) }} class="pure-button">
                                         <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
                                         Delete
                                     </a>
