--- a/auth/blueprints/adjustment/templates/adjustment/new.html
+++ b/auth/blueprints/adjustment/templates/adjustment/new.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.adjustment_new') }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.new') }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'adjustment/_form.html' %}
         </form>
