--- a/auth/templates/shared/actions.html
+++ b/auth/templates/shared/actions.html
@@ -18,13 +18,8 @@
                 </ul>
             </li>
         {% else %}
-            {% if resource in ['order'] %}
-            {% set endpoint = '%s.action' % resource %}
-            {% else %}
-            {% set endpoint = '.%s_action' % resource %}
-            {% endif %}
             <li class="pure-menu-item">
-                <a href="{{ url_for(endpoint, hash=instance.hash, action=action) }}" class="pure-menu-link" title="{{ action }}">
+                <a href="{{ url_for('%s.action' % resource, hash=instance.hash, action=action) }}" class="pure-menu-link" title="{{ action }}">
                     {% if defn.icon %}
                     <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
                     {% endif %}
