--- a/auth/templates/layouts/default.html
+++ b/auth/templates/layouts/default.html
@@ -107,7 +107,7 @@
 
                         <div class="pure-u-1-2 pagination-container">
                             {% if pagination %}
-                            {{ render_pagination(pagination, '.%s_index' % resource) }}
+                            {{ render_pagination(pagination, '.%s.index' % resource) }}
                             {% endif %}
                         </div>
                     </div>
